# MarkFlow

./: .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  index.html  package-lock.json  package.json  qa-image-actions.html  qa-image-remote-save.html  qa-image.html  qa-mermaid-png.html  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/commands/: codex-optimize.md  codex-prompt.md  markflow-issue.md
.claude/memory/: MEMORY.md  architecture-backend.md  architecture-frontend.md  debugging-code-block-line-numbers.md  debugging-source-editor-layout.md  troubleshooting-tiptap-markdown-serializer.md  workflow-compliance.md
.claude/rules/: branch-first.md  css-layout.md  git-commit.md  line-numbers.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md
.github/workflows/: auto-pr.yml  ci.yml  release.yml
docs/: architecture.md  bundle-baseline.md  bundle-report.html  file-tree-performance.md  product-spec.md  technical-design.md
docs/knowledge/: ui-fixes.md
docs/triage/: test-issues.md
docs/ui-design/: SPEC.md
e2e/: run.mjs  wdio.conf.mjs
e2e/page-objects/: app.mjs
example/: Test.md  example-en.md  example-zh.md
example/test dir/: test file.md
openspec/specs/: INDEX.md  architecture.md  development-flow.md  product-spec.md  technical-design.md  test-issues.md  ui-fixes-spec.md
openspec/ui-design/: SPEC.md  index.html
patches/: @wdio+tauri-service+1.2.0.patch
scripts/: check-archive-synced.sh  check-bundle-size.sh  check-capabilities.sh  file-tree-benchmark.mjs  homebrew-publish.sh
src/: main.autosave.test.ts  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: main.json  plantuml-http.json  window-minimal.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  http.rs  lib.rs  logger.rs  main.rs  paths.rs  state.rs
src-tauri/src/commands/: export.rs  files.rs  files_image.rs  files_meta.rs  files_pagination.rs  mod.rs  settings.rs
src-tauri/src/config/: settings.rs
src-tauri/src/fs/: ignore.rs  mod.rs  watcher.rs
src/components/: activeDoc.ts  activeDocument.test.ts  activeDocument.ts  contextMenu.test.ts  contextMenu.ts  degradationBar.ts  fileTree.core.test.ts  fileTree.core.ts  fileTree.dragdrop.ts  fileTree.inline.ts  fileTree.lazy.test.ts  fileTree.state.test.ts  fileTree.state.ts  fileTree.ts  imageContextMenu.ts  linkDialog.ts  menu.test.ts  menu.ts  mermaidContextMenu.helpers.test.ts  mermaidContextMenu.ts  newFileDialog.ts  outline.ts  (+15 more)
(+434 files in other folders)
