[package]
name = "markflow"
version = "1.0.0"
edition = "2021"

[lib]
name = "markflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
dirs = "6"
tauri-plugin-shell = "2.3.5"
base64 = "0.22"
reqwest = { version = "0.12", features = ["rustls-tls"] }
