[package]
name = "markflow"
version = "0.0.6"
edition = "2021"

[lib]
name = "markflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
dirs = "6"
tauri-plugin-http = "2"
tauri-plugin-shell = "2.3.5"
base64 = "0.22"
futures = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["sync", "macros", "rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
libc = "0.2"
